eks/litellm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: litellm
  ports:
    - port: 4000
      targetPort: 4000
  type: LoadBalancer
